Test/Int/Arith.expected
Test/Int/Arith.lean:3:47: error: unsolved goals
n m : Int
h : 0 < m
a✝ : ¬n % m < m
⊢ 0 < m →
    ¬n % m < m →
      ¬(m + -1 * if m = 0 then (fun x => x % 0) n else n % m) ≥ 1 →
        n = (if m = 0 then (fun x => x % 0) n else n % m) + m * (n / m) →
          m + -1 * n + m * (n / m) ≥ 1 → n % m = if m = 0 then (fun x => x % 0) n else n % m

n m : Int
h : 0 < m
a✝ : ¬n % m < m
⊢ 0 < m →
    ¬n % m < m →
      n = (if m = 0 then (fun x => x % 0) n else n % m) + m * (n / m) →
        ¬(m + -1 * if m = 0 then (fun x => x % 0) n else n % m) ≥ 1 →
          m + -1 * n + m * (n / m) ≥ 1 →
            m + -1 * n + m * (n / m) ≥ 1 → n % m = if m = 0 then (fun x => x % 0) n else n % m

n m : Int
h : 0 < m
a✝ : ¬n % m < m
⊢ 0 < m →
    ¬n % m < m →
      n % m = n - m * (n / m) ∧
        (m > 0 → m * (n / m) ≤ n ∧ n < m * (n / m + 1)) ∧ (m < 0 → m * (n / m) ≤ n ∧ n < m * (n / m + -1))

n m : Int
h : 0 < m
a✝ : ¬n % m < m
⊢ 0 < m → ¬n % m < m → n % m = if m = 0 then (fun x => x % 0) n else n % m
